feat: support no yolo merge
